--- a/Basic Databindings and Directives/submit.html
+++ b/Basic Databindings and Directives/submit.html
@@ -8,8 +8,10 @@
 	<div class="container">
   		<div class="row">
 			<div id = "app" class = "col-sm-6 col-md-offset-3">
-				<!-- Vue on the submit action, trigger the handleRequest methods-->
-				<form action = "submit.html" v-on:submit = "handleRequest">
+				<!-- Vue on the submit action, trigger the handleRequest methods, prevent is the event modifier
+					 Can replave v-on with @ 
+				-->
+				<form action = "submit.html" @submit.prevent = "handleRequest">
 					
 					<button type = "submit" >
 						Submitted
@@ -25,10 +27,10 @@
 
 	new Vue({
 		el: '#app',
+		//Methods object, any method delared above must be initiated here
 		methods:{
-			handleRequest:function(e){
+			handleRequest:function(){
 				alert('Request Handled');
-				e.preventDefault();
 			}
 		}
 	});
